--- a/examples/pet_for_text_classification.ipynb
+++ b/examples/pet_for_text_classification.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +30,8 @@
     "import pandas as pd\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
-    "from few_shot_learning_nlp.fewShotTextClassification.PatternExploiting import PETTrainer\n",
-    "from few_shot_learning_nlp.fewShotTextClassification.PatternExploitingDataset import PETDatasetForClassification\n",
+    "from few_shot_learning_nlp.few_shot_text_classification.pattern_exploiting import PETTrainer\n",
+    "from few_shot_learning_nlp.few_shot_text_classification.pattern_exploiting_dataset import PETDatasetForClassification\n",
     "from few_shot_learning_nlp.utils import stratified_train_test_split\n",
     "from few_shot_learning_nlp.loss import FocalLoss\n",
     "from typing import List\n",
